--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodewebsite",
   "version": "1.0.0",
   "description": "Node Js Website",
-  "main": "index.html",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
